tests/should_fail/syntax_struct_missing_brace.nv
module main

// SHOULD FAIL: struct literal missing closing brace
struct Point {
    x: Int,
    y: Int
}
let p = Point { x: 1, y: 2
println(p.x)
